# monkey-devs

./: .gitignore  pyproject.toml
.opencode/: config.yaml  registry.yaml
.opencode/skills/: adr-writing.md  adversarial-review.md  api-documentation.md  code-generation.md  conversational-intake.md  delivery-summary.md  developer-guide-writing.md  docstring-writing.md  handoff-composer.md  readme-writing.md  requirements-writing.md  resource-allocation.md  stack-decision.md  stack-evaluation.md  stage-gate.md  system-design.md  systematic-debugging.md  task-decomposition.md  task-dispatch.md  tdd-implementation.md  test-categorization.md
docs/: review-issue-log.md
docs/concepts/: monkey-devs.md
docs/design/: design-monkey-devs.md
docs/specs/: spec-monkey-devs.md
docs/superpowers/plans/: 2026-04-15-monkey-devs.md
monkey_devs/: cli.py  config.py  graph.py  logger.py  orchestrator.py  state.py  tasks.py  tools.py
monkey_devs/nodes/: architecture.py  code_fixing.py  concept_spec.py  delivery.py  documentation.py  implementation.py  review.py
tests/: conftest.py  test_checkpointer.py  test_config.py  test_handoff.py  test_logger.py  test_registry.py  test_scaffold.py  test_skill_files.py  test_state.py  test_tasks.py  test_tools.py
