[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "monkey-devs"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "langgraph>=0.2",
    "langgraph-checkpoint-sqlite>=1.0",
    "litellm>=1.40",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.scripts]
monkey-devs = "monkey_devs.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
